fix svg on mobile

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -39,10 +39,13 @@
   border: 1px solid var(--color-icons);
   fill: var(--color-primary);
 
+  & svg {
+    min-width: 1.6rem;
+  }
+
   &Prev {
     margin-right: 0.8rem;
   }
-
 
   &Next {
     margin-left: 0.8rem;
